--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -2,6 +2,7 @@
     "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-ROOSGFR\\SQLEXPRESS;Database=master;Trusted_Connection=True;"
   },
+  "JWTkey": "Teltonika_CoViDtAsK_SaMpLeKey",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
